erDiagram
    User ||--o{ Collection : "owns"
    User ||--o{ Scan : "performs"
    User ||--o{ SavedArtwork : "saves"
    User ||--o{ RefreshToken : "has"

    Artist ||--o{ Artwork : "created"
    Museum ||--o{ Artwork : "houses"

    Artwork ||--o{ Scan : "identified in"
    Artwork ||--o{ SavedArtwork : "saved as"

    Collection ||--o{ SavedArtwork : "contains"

    User {
        string id PK
        string email UK
        string passwordHash
        string firstName
        string lastName
        string avatarUrl
        enum plan
        datetime planExpiresAt
        string preferredLanguage
        boolean notificationsOn
    }

    RefreshToken {
        string id PK
        string token UK
        string userId FK
        datetime expiresAt
    }

    Artist {
        string id PK
        string name
        int birthYear
        int deathYear
        string nationality
        text biography
        string imageUrl
    }

    Artwork {
        string id PK
        string title
        int year
        string medium
        string dimensions
        string style
        text description
        string imageUrl
        string artistId FK
        string museumId FK
    }

    Scan {
        string id PK
        string userId FK
        enum scanType
        string imageUrl
        string artworkId FK
        float confidence
        json rawAiResult
        text extractedText
        string userCorrectedTitle
        string userCorrectedArtist
        float latitude
        float longitude
    }

    Collection {
        string id PK
        string userId FK
        string name
        string description
        string coverUrl
        boolean isDefault
    }

    SavedArtwork {
        string id PK
        string userId FK
        string artworkId FK
        string collectionId FK
        text personalNote
        string userPhotoUrl
        int rating
        string customTitle
        string customArtist
    }

    Museum {
        string id PK
        string name
        text description
        string address
        string city
        string country
        float latitude
        float longitude
        string googlePlaceId UK
        json openingHours
    }

    AiUsageLog {
        string id PK
        string userId
        string endpoint
        string model
        int tokensIn
        int tokensOut
        float costUsd
        boolean success
    }
